# fast-api-tutorials

./: README.md  main.py  todo.py
lms/: Pipfile  alembic.ini  main.py  pyproject.toml
lms/alembic/: env.py
lms/alembic/data/: students.json
lms/alembic/versions/: 3a745055a6d8_initial_migration.py  443e477eed94_add_is_active_from_profile_to_user_table.py  c05051291ddc_add_initial_table.py
lms/api/Enums/: enums.py
lms/api/architecture/: users.py
lms/api/models/: course.py  user.py
lms/api/repository/: courses.py  users.py
lms/api/routes/: courses.py  sections.py  users.py
lms/db/: setup.py
lms/pydantic_schema/: course.py  users.py
lms/utilities/: mixins.py
models/: models.py
planner/: main.py  planner.sqlite3
planner/database/: connection.py
planner/models/: events.py  users.py
planner/routes/: account.py  events.py
